# LLM_annotate

./: MANIFEST.in  README.md  demo.ipynb  pyproject.toml  requirements.txt  setup.py
data/a room with a view/: novel.txt
data/alices adventures in wonderland/: chunks.json  new.json  novel.txt  stats.json
data/dormitory/: character_embeddings.json  character_exploration.json  chunks.json  new.json  newtrimmed.json  novel.txt  novel_annotations.json  stats.json  stats_warmth-competence.json  trait_annotations.json
data/dracula/: novel.txt  novel_annotations.json  novel_annotations_disambiguated.json  novel_annotations_trimmed.json  novel_chunks.json  novel_chunks.txt  stats.json  stats_warmth-competence.json
data/enchanted april/: novel.txt
data/laboratory/: novel.txt  novel_annotations.json  novel_annotations_trimmed.json  novel_chunks.json  novel_trait_exploration.json  novel_trait_exploration_collapsed.json  stats.json
data/little women/: character_embeddings.json  chunks.json  novel.txt  trait_annotations.json  trait_annotations_trimmed.json
data/middlemarch/: novel.txt
data/moby dick/: novel.txt
data/pride and prejudice/: annotations.json  annotations_default.json  annotations_refined.json  annotations_refined_default.json  chunks.json  chunks_default.json  evaluation copy.json  evaluation_default copy.json  evaluation_default_summary.json  evaluation_summary.json  novel.txt  statistics.json  statistics_default.json
data/romeo and juliet/: novel.txt
data/simpsons fandom movie script/: chunks.json  chunks_manuscript.json  manuscript_evaluation.json  (+4 more)
(+2 files in other folders)
