[tool.poetry]
name = "llm_annotate"
version = "0.1.0"
description = "A package for annotating text using LLMs."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
# Add any other dependencies your package requires here

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"